# zstd-rs

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Readme.md  appveyor.yml  update_doc.sh
.github/: dependabot.yml
.github/workflows/: linux.yml  macos.yml  rust.yml  wasm.yml  windows.yml
assets/: example.txt.v5.zst  example.txt.v6.zst  example.txt.v7.zst  example.txt.v8.zst  example.txt.zst  zeros64.zst
examples/: benchmark.rs  stream.rs  train.rs  zstd.rs  zstdcat.rs
src/: block.rs  build.rs  decoder.rs  dict.rs  encoder.rs  lib.rs  ll.rs
src/block/: compressor.rs  decompressor.rs  mod.rs
src/bulk/: compressor.rs  decompressor.rs  mod.rs
src/stream/: decoder.rs  encoder.rs  functions.rs  mod.rs  raw.rs  tests.rs  zio.rs
src/stream/read/: async_tests.rs  mod.rs  tests.rs
src/stream/write/: async_tests.rs  mod.rs  tests.rs
src/stream/zio/: reader.rs  writer.rs
tests/: issue_251.rs
zstd/: Cargo.toml  Readme.md
zstd-safe/: Cargo.toml  Readme.md  build.rs  update_consts.sh
zstd-safe/fuzz/: Cargo.toml
zstd-safe/fuzz/fuzz_targets/: zstd_fuzzer.rs
zstd-safe/src/: lib.rs  lib.rs.bk  seekable.rs  tests.rs
zstd-safe/zstd-sys/: Cargo.toml  build.rs  update_bindings.sh  update_zstd.sh  zstd.h  zstd_errors.h
zstd-safe/zstd-sys/examples/: it_work.rs
zstd-safe/zstd-sys/src/: bindings.rs  bindings_experimental.rs  bindings_std.rs  bindings_std_experimental.rs  bindings_zdict.rs  bindings_zdict_experimental.rs  bindings_zdict_std.rs  bindings_zdict_std_experimental.rs  bindings_zstd.rs  bindings_zstd_experimental.rs  bindings_zstd_seekable.rs  bindings_zstd_std.rs  bindings_zstd_std_experimental.rs  lib.rs  wasm_shim.rs
zstd-safe/zstd-sys/wasm-shim/: stdlib.h  time.h
zstd-sys/: Cargo.toml  Readme.md  build.rs  zstd.h
zstd-sys/src/: bindings.rs  bindings_experimental.rs  bindings_std.rs  bindings_std_experimental.rs  lib.rs
zstd/assets/: example.txt  example.txt.v5.zst  example.txt.v6.zst  example.txt.v7.zst  example.txt.zst
zstd/src/: dict.rs  lib.rs
zstd/src/block/: mod.rs
zstd/src/stream/: raw.rs
zstd/src/stream/read/: mod.rs
zstd/src/stream/write/: mod.rs
zstd/src/stream/zio/: reader.rs
