[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
description = "Binding for the zstd compression library."
documentation = "https://docs.rs/zstd"
keywords = ["zstd", "zstandard", "compression"]
categories = ["compression", "api-bindings"]
license = "MIT"
name = "zstd"
repository = "https://github.com/gyscos/zstd-rs"
version = "0.12.4"
exclude = ["assets/*.zst"]
readme = "Readme.md"
edition = "2018"
rust-version = "1.43"  # Some features (including default ones) can raise this value

[package.metadata.docs.rs]
features = ["experimental", "zstdmt", "zdict_builder", "doc-cfg"]

[badges]
travis-ci = { repository = "gyscos/zstd-rs" }

[dependencies]
zstd-safe = { path = "zstd-safe", version = "6.0.3", default-features = false, features = ["std"] }

[dev-dependencies]
clap = {version = "4.0", features=["derive"]}
humansize = "2.0"
partial-io = "0.5"
walkdir = "2.2"

[features]
default = ["legacy", "arrays", "zdict_builder"]

bindgen = ["zstd-safe/bindgen"]
debug = ["zstd-safe/debug"]
legacy = ["zstd-safe/legacy"]
pkg-config = ["zstd-safe/pkg-config"]
wasm = []
zstdmt = ["zstd-safe/zstdmt"]
experimental = ["zstd-safe/experimental"]
thin = ["zstd-safe/thin"]
arrays = ["zstd-safe/arrays"]
no_asm = ["zstd-safe/no_asm"]
doc-cfg = []
zdict_builder = ["zstd-safe/zdict_builder"]

# These two are for cross-language LTO.
# Will only work if `clang` is used to build the C library.
fat-lto = ["zstd-safe/fat-lto"]
thin-lto = ["zstd-safe/thin-lto"]

[[example]]
name = "train"
required-features = ["zdict_builder"]
