[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
name = "zstd-safe"
build = "build.rs"
version = "3.0.1+zstd.1.4.9"
description = "Safe low-level bindings for the zstd compression library."
keywords = ["zstd", "zstandard", "compression"]
categories = ["api-bindings", "compression"]
repository = "https://github.com/gyscos/zstd-rs"
license = "MIT/Apache-2.0"
readme = "Readme.md"

[package.metadata.docs.rs]
features = ["experimental"]

[dependencies]
zstd-sys = { path = "./zstd-sys", version = "=1.4.20", default-features = false }
libc = "0.2.21"

[features]
default = ["legacy"]

bindgen = ["zstd-sys/bindgen"]
debug = ["zstd-sys/debug"]
experimental = ["zstd-sys/experimental"]
legacy = ["zstd-sys/legacy"]
pkg-config = ["zstd-sys/pkg-config"]
std = ["zstd-sys/std"] # Use std instead of libc types - useful on wasm.
zstdmt = ["zstd-sys/zstdmt"]
thin = ['zstd-sys/thin']
