[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
build = "build.rs"
categories = [
    "api-bindings",
    "compression",
]
description = "Low-level bindings for the zstd compression library."
keywords = [
    "zstd",
    "zstandard",
    "compression",
]
license = "MIT/Apache-2.0"
links = "zstd"
name = "zstd-sys"
readme = "Readme.md"
repository = "https://github.com/gyscos/zstd-rs"
version = "1.4.20+zstd.1.4.9"

[package.metadata.docs.rs]
features = ["experimental"]

[lib]
doctest=false  # Documentation is for C code, good luck testing that.

[build-dependencies.bindgen]
optional = true
version = "0.57"

[build-dependencies.pkg-config]
optional = true
version = "0.3"

[build-dependencies.cc]
version = "1.0.45"
features = ["parallel"]

[dependencies]
libc = "0.2.45"

[features]
default = ["legacy"]

debug = [] # Enable zstd debug logs
experimental = [] # Expose experimental ZSTD API
legacy = [] # Enable legacy ZSTD support (for versions < zstd-0.8)
non-cargo = [] # Silence cargo-specific build flags
std = [] # Use std types instead of libc in bindgen
zstdmt = [] # Enable multi-thread support (with pthread)
thin = [] # Optimize library by size
