[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
build = "build.rs"
categories = [
    "api-bindings",
    "compression",
]
description = "Low-level bindings for the zstd compression library."
keywords = [
    "zstd",
    "zstandard",
    "compression",
]
license = "MIT/Apache-2.0"
links = "zstd"
name = "zstd-sys"
readme = "Readme.md"
repository = "https://github.com/gyscos/zstd-rs"
version = "2.0.1+zstd.1.5.2"
edition = "2018"

# Use include instead of exclude, as a (temporary)
# workaround for https://github.com/rust-lang/cargo/issues/9555
include = [
    "/LICENSE",
    "/*.*",
    "/src/",
    "/wasm-shim/**/*.h",
    "/zstd/LICENSE",
    "/zstd/COPYING",
    "/zstd/lib/**/*.c",
    "/zstd/lib/**/*.h",
    "/zstd/lib/**/*.S",
]
# exclude = [
#     "zstd",
#     "!zstd/LICENSE",
#     "!zstd/COPYING",
#     "!zstd/lib/**/**.h",
#     "!zstd/lib/**/**.c",
# ]

[package.metadata.docs.rs]
features = ["experimental"]

[lib]
doctest=false  # Documentation is for C code, good luck testing that.

[build-dependencies.bindgen]
optional = true
version = "0.60"
default-features = false
features = ["runtime", "which-rustfmt"]

[build-dependencies.pkg-config]
version = "0.3"

[build-dependencies.cc]
version = "1.0.45"
features = ["parallel"]

[dependencies]
libc = "0.2.45"

[features]
default = ["legacy", "zdict_builder"]

debug = [] # Enable zstd debug logs
experimental = [] # Expose experimental ZSTD API
legacy = [] # Enable legacy ZSTD support (for versions < zstd-0.8)
non-cargo = [] # Silence cargo-specific build flags
pkg-config = []
std = [] # Use std types instead of libc in bindgen
zstdmt = [] # Enable multi-thread support (with pthread)
thin = [] # Optimize binary by size
no_asm = [] # Disable ASM files (only on amd64 for decompression)
zdict_builder = []
